tests/duarouter/trips/errors/vehicle_empty_departspeed/errors.duarouter
Error: Attribute 'departSpeed' in definition of trip '0' is empty.
Error: Invalid departSpeed definition for trip '0';
 must be one of ("random", "max", or a float>=0)
Quitting (on error).
